# ShoppingDetails

./: CMakeLists.txt  README.md  filltable.cpp  filltable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
